crates/credential/tests/probes/scheme_sensitivity_plain_apikey_string.stderr
error: field `api_key` on #[auth_scheme(sensitive)] struct must be SecretString or SecretBytes (plain String for a secret-named field is a leak risk per Tech Spec §15.5)
  --> tests/probes/scheme_sensitivity_plain_apikey_string.rs:12:5
   |
12 |     pub api_key: String, // snake_case secret-named plain String — REJECT
   |     ^^^
